# Olio-ohjelmointi

./: main.cpp
Thv_1_Olio/: CMakeLists.txt
Thv_2_Olio/: CMakeLists.txt
Thv_3_Olio/: CMakeLists.txt  main.cpp
Thv_4_Olio/: CMakeLists.txt  main.cpp
